# PurpleSector-FullStackCodingChallenge

./: .gitignore  README.md
.dev/: DockerfileAPI  DockerfileAPI.dockerignore  DockerfileUI  DockerfileUI.dockerignore  docker-compose.yml
api/: .env.dist  pyproject.toml
api/codingchallenge/: apps.py  models.py  serializers.py  urls.py  views.py
api/codingchallenge/migrations/: 0001_initial.py  0002_auto_20241112_0920.py
api/interview/: settings.py  urls.py
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  main.tsx  type.d.ts
ui/src/actions/: race.ts
ui/src/settings/: agGrid.ts  dayJs.ts  index.ts
